--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Enlite is a platform that enables affordable learning from anyone skilled, on-demand, anywhere.</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start exploring now</a>
+              <h1 class="mb-5">Learn something from someone skilled, wherever you want, whenever you want</h1>
+              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">About Enlite</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -85,14 +85,21 @@
     <section class="download bg-primary text-center" id="download">
       <div class="container">
         <div class="row">
+
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">Begin your quest of knowledge today!</h2>
-            <p>Our app's beta is available on all iOS devices now. <a class="form-link" href="https://goo.gl/forms/YPLKMM7yFdWtsn0b2" target="_blank">Click here</a> to get your own copy of the app!</p>
+            <h2 class="section-heading">Enlite connects people who want to learn to skilled people willing to teach</h2>
+            <p>Get early access to our beta now! <a class="form-link" href="https://goo.gl/forms/YPLKMM7yFdWtsn0b2" target="_blank">Sign up here</a></p>
+
+    
+           
+
             <div class="badges">
               <!--<a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
               <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>!-->
             </div>
           </div>
+
+
         </div>
       </div>
     </section>
@@ -100,8 +107,8 @@
     <section class="features" id="features">
       <div class="container">
         <div class="section-heading text-center">
-          <h2>Many Advantages For The Best Experience</h2>
-          <p class="text-muted">Here's just a snippet of the many advantages that Enlite has to offer!</p>
+          <h2>We make learning really simple</h2>
+          <p class="text-muted">Here's how Enlite can help you</p>
           <hr>
         </div>
         <div class="row">
@@ -163,7 +170,7 @@
     <section class="cta">
       <div class="cta-content">
         <div class="container">
-          <h2>Stop wanting.<br>Start doing.</h2>
+          <h2>Upgrade your learning today</h2>
           <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Sign Up for the beta</a>
         </div>
       </div>
