--- a/Enlite-Question-Generator.html
+++ b/Enlite-Question-Generator.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Paper Generator</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <!--<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">-->
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -18,6 +19,7 @@
 </head>
 
 <body>
+
   <div class="container-fluid" id="lead">
     <div class="row">
       <h1 class="display-3" id="leadText">Paper Generator</h1>
@@ -63,8 +65,6 @@
 	
   <div class="container" id="questions">
     <div class="row">
-
-	
       <table width="80%" id="table" style="border-collapse:separate;">
       </table>
 		<div id="placeholder-text">
@@ -72,6 +72,10 @@
 		</div>
     </div>
   </div>
+
+
+  
+
 	
   <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-app.js"></script>
