added browser warning

--- a/Enlite-Question-Generator.html
+++ b/Enlite-Question-Generator.html
@@ -6,6 +6,8 @@
   <title>Paper Generator</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <!--<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">-->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.1/mobile-detect.min.js"></script>
+
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -16,9 +18,17 @@
   gtag('js', new Date());
   gtag('config', 'UA-118781709-1');
   </script>
+
+  <script type="text/javascript">
+    if ( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+        window.alert("Currently, this site only works on desktop :(")
+    } 
+  </script>
 </head>
 
 <body>
+	
+
 
   <div class="container-fluid" id="lead">
     <div class="row">
@@ -95,5 +105,6 @@
     firebase.initializeApp(config);
   </script>
   <script type="text/javascript" src="question-generator.js"></script>
+
 </body>
 </html>
