--- a/Enlite-Question-Generator.html
+++ b/Enlite-Question-Generator.html
@@ -45,6 +45,7 @@
           <option value="Biology">Biology</option>
           <option value="Chemistry">Chemistry</option>
           <option value="Physics">Physics</option>
+		  <option value="Economics">Economics</option>
          </select>
         </div>
 		<h2 class="top-text text-before-button">paper, with</h2>
